--- a/responsive.css
+++ b/responsive.css
@@ -15,9 +15,9 @@
     border-radius: 10px;
   }
 
-  .keterangan {
+  /* .keterangan {
     display: none;
-  }
+  } */
 
   .informasi h2 {
     font-size: 14px;
