--- a/responsive.css
+++ b/responsive.css
@@ -1,7 +1,17 @@
-@media all and (min-width: 670px){
-  .container .menu-icon{
-    display: none;
-  }  
+/* Untuk Tablet */
+@media all and (max-width: 1000px){
+  .lesson {
+    width: 100%;
+    margin-bottom: 50px;
+  }
+  
+  .top-wrapper h1 {
+    font-size: 32px;
+  }
+  
+  .heading h2 {
+    font-size: 20px;
+  }
 
   .top-wrapper {
     height: auto;
@@ -15,18 +25,64 @@
     border-radius: 10px;
   }
 
-  /* .keterangan {
-    display: none;
-  } */
-
   .informasi h2 {
     font-size: 14px;
   }
 
+  .heading h2 {
+    width: 100%;
+    font-size: 40px;
+    margin-bottom: 30px;
+  }
+
+  .lesson img{
+    margin: 0 150px 30px 150px;
+  }
+
+  .lesson p {
+    width: 100%;
+    text-align: justify;
+    margin: 0 0;
+  }
+
+  .heading h3 {
+    width: 100%;
+    font-size: 40px;
+    margin-bottom: 30px;
+    padding: 0 0;
+  }
+ 
+  .icon-left img{
+    margin: 0 150px 30px ;
+  }
+
+  .lesson-wrapper-nit{
+    width: 100%;width: 100%;
+    height: 700px;
+  }
+  
+  .lesson-nit{
+    width: 50%;
+    margin-bottom: 30px;
+  }
+
+  .lessons img{
+    width: 50%;
+  }
+
+  .lesson-nit p{
+    margin: 10px;
+  }
+
+}
+
+@media all and (min-width: 670px){
+  .container .menu-icon{
+    display: none;
+  }
 }
 
 @media all and (max-width: 670px){
-
   .header-right {
     display: none;
   }
@@ -75,12 +131,54 @@
     margin: 10px;
   }
 
-  footer {
+  .lesson-wrapper{
+    text-align: left;    
+  }
+
+  .heading h1 {
     text-align: center;
   }
 
-  .keterangan {
-    display: none;
+  .heading h2{
+    text-align: center;
+    font-size: 30px;
   }
 
+  .heading h3{
+    text-align: center;
+    font-size: 30px;
+  }
+
+  .lessons {
+    width: 100%;
+  }
+
+  .lessons img{
+    width: 100%;
+    margin: 0 0 30px;
+  }
+
+  .lesson-wrapper-nit{
+    height: 1350px;
+  }
+
+  .heading-nit{
+    width: 100%;
+  }
+
+  .lesson-nit{
+    width: 100%;
+  }
+
+  .lesson-nit img{
+    width: 50%;
+  }
+
+  .btn {
+    width: 100%;
+  }
+
+  footer {
+    text-align: center;
+  }
 }
